@@ -26,8 +26,7 @@ enum
 {
   OBJ_TYPE_ELF,
   OBJ_TYPE_MEMDISK,
-  OBJ_TYPE_CONFIG,
-  OBJ_TYPE_FONT
+  OBJ_TYPE_CONFIG
 };
 
 /* The module header.  */
